fix opacity flicker

--- a/michael/scss/style.css
+++ b/michael/scss/style.css
@@ -59,9 +59,7 @@ a {
     -moz-transition: 0.5s ease all;
     -ms-transition: 0.5s ease all;
     -o-transition: 0.5s ease all;
-    transition: 0.5s ease all;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden; }
+    transition: 0.5s ease all; }
     .photogrid .photo img {
       max-width: 100%; }
     .photogrid .photo:hover {
@@ -102,9 +100,7 @@ header {
   -moz-transition: 0.5s ease all;
   -ms-transition: 0.5s ease all;
   -o-transition: 0.5s ease all;
-  transition: 0.5s ease all;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
+  transition: 0.5s ease all; }
   header:hover {
     opacity: 1; }
   header img {
@@ -146,9 +142,7 @@ nav.main, footer {
   -moz-transition: 0.5s ease all;
   -ms-transition: 0.5s ease all;
   -o-transition: 0.5s ease all;
-  transition: 0.5s ease all;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
+  transition: 0.5s ease all; }
   nav.main:hover, footer:hover {
     opacity: 1; }
   nav.main ul, footer ul {
@@ -246,8 +240,6 @@ footer {
       -ms-transition: 0.5s ease all;
       -o-transition: 0.5s ease all;
       transition: 0.5s ease all;
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
       position: absolute;
       top: 4%;
       left: 2%; }
